--- a/KnightOwlMVC/Views/Home/Index.cshtml
+++ b/KnightOwlMVC/Views/Home/Index.cshtml
@@ -69,8 +69,8 @@
                         </div>
                     </div>
                 </div>
-                @* TODO: Add To do List *@
-
+                @{ Html.RenderAction("_ToDo", "ToDoes"); }
+                
                 @* TODO: Add Keeper Log *@
             </div>
         </div>
